2009-06-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/monitor/nagios/stream.py:
	Quick hack added to not pick up trailing " for url from asx
	playlists.

2009-06-03  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Julien

	* flumotion/scenario/steps/httpstreamersteps.py:
	Change the default port to 8800 (the defined on configuration) and
	don't let the streamer to override the porter's port when it has not
	been set.

2009-06-03  Jan Urbanski  <jurbanski@flumotion.com>

	patch by: Thomas Vander Stichele  <thomas at apestaart dot org>
	reviewed by: Jan

	* flumotion/twisted/fdserver.py:
	Improve logging of FD receiving.

	* flumotion/component/misc/porter/porter.py:
	Add and improve logging of handling and passing the connection.

	* flumotion/component/consumers/httpstreamer/resources.py:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/component/misc/httpserver/httpfile.py:
	Add logging of request handling stages.

	* flumotion/test/test_porter.py:
	Make the FakeAvatar in the porter test have an avatarId, sice it's
	logged during the test run.

2009-06-02  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/misc/httpserver/httpserver.py:
	Return a ComponentSetupHandledException when the setup fails if the
	exception has already been handled, preventing the component of having
	two messages for the same problem.
	Really Fixes #951. At r7922 the same issue for the porter was fixed,
	not for the streamer.

2009-06-02  Arek Korbik  <arkadini@gmail.com>

	reviewed by: Jan

	* flumotion/common/package.py:
	Patch ihooks's ModuleImporter class for increased python2.6
	compatibility. Fixes #1263.

2009-05-28  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	* doc/random/developer-introduction.rst:
	Add back Subversion commit instructions as an alternate workflow.

2009-05-28  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>
